Conversations will unread messages will be highlighted in bold and current converstaion is has background of white

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,10 @@
     cursor: pointer;
 }
 
-.conversation-item-active {
+.conversation-item-unread {
     font-weight: bold;
+}
+
+.conversation-item-active {
+    background-color: white;
 }
